--- a/WebApp/Pages/Index.razor
+++ b/WebApp/Pages/Index.razor
@@ -2,7 +2,7 @@
 
 @inject NavigationManager NavigationManager
 
-<h1>Optix Opt 2022</h1>
+<h1>Optix Management System</h1>
 
 <CustomerWidgetComponent />
 <hr/>
