--- a/WebApp/Pages/OrderCustomer/OrderCustomerComponent.razor
+++ b/WebApp/Pages/OrderCustomer/OrderCustomerComponent.razor
@@ -10,7 +10,7 @@
 
 @if(orderCustomers != null)
 {
-        <table class="table" id="myTable">
+        <table class="table table-sm align-middle">
             <thead>
                 <tr>
                     <th>Name</th>
