--- a/WebApp/Pages/_Host.cshtml
+++ b/WebApp/Pages/_Host.cshtml
@@ -20,6 +20,10 @@
     <!--https://www.datatables.net/examples/basic_init/zero_configuration.html -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
 integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Literata:wght@400;500&display=swap" rel="stylesheet">
   
 <script>
     $(document).ready( function () {
