--- a/WebApp/Pages/Index.razor
+++ b/WebApp/Pages/Index.razor
@@ -2,7 +2,37 @@
 
 @inject NavigationManager NavigationManager
 
-<h1>Optix Management System</h1>
+<style>
+    .optix-font{
+        font-family: 'Literata', serif;
+        /*font-family: "Literata script=latin rev=2";*/
+        font-weight: 400;
+        font-style: normal;
+        line-height: initial;
+    }
+    .widget-column-border{
+        border-radius:10px;
+    }
+    h4.mx-auto{
+        width: 100%;
+        text-align: center;
+        font-weight: 500;
+    }
+    .optix-row-1{
+        /*background-color:#eee;*/
+    }
+    .optix-row-2{
+        /*background-color:#ddd;*/
+    }
+    .optix-widget-title{
+        float:left; 
+        width: 100%;
+    }
+</style>
+
+<div class="optix-font" style="width:100%; text-align:center;">
+    <h1>Optix Management System</h1>
+</div>
 
 <CustomerWidgetComponent />
 <hr/>
