--- a/WebApp/Pages/Customer/EditCustomerComponent.razor
+++ b/WebApp/Pages/Customer/EditCustomerComponent.razor
@@ -14,23 +14,18 @@
         <ValidationSummary></ValidationSummary>
 
         <div class="form-group">
-            <label for="name">Name</label>
+            <label for="name">Login</label>
             <InputText id="name" @bind-Value="customer.Name" class="form-control"></InputText>
         </div>
 
         <div class="form-group">
-            <label for="description">Description</label>
-            <InputTextArea id="description" @bind-Value="customer.Description" class="form-control"></InputTextArea>
-        </div>
-
-        <div class="form-group">
-            <label for="password">Password</label>
-            <InputText id="password" @bind-Value="customer.Password" class="form-control"></InputText>
-        </div>
-
-        <div class="form-group">
-            <label for="fullname">Fullname</label>
+            <label for="fullname">ФИО</label>
             <InputText id="fullname" @bind-Value="customer.Fullname" class="form-control"></InputText>
+        </div>
+
+        <div class="form-group">
+            <label for="password">Пароль</label>
+            <InputText id="password" @bind-Value="customer.Password" class="form-control"></InputText>
         </div>
 
         <div class="form-group">
@@ -39,13 +34,18 @@
         </div>
 
         <div class="form-group">
-            <label for="company">Company</label>
+            <label for="company">Организация</label>
             <InputText id="company" @bind-Value="customer.Company" class="form-control"></InputText>
         </div>
 
         <div class="form-group">
-            <label for="phone">Phone</label>
+            <label for="phone">Телефон</label>
             <InputText id="phone" @bind-Value="customer.Phone" class="form-control"></InputText>
+        </div>
+
+        <div class="form-group">
+            <label for="description">Описание</label>
+            <InputTextArea id="description" @bind-Value="customer.Description" class="form-control"></InputTextArea>
         </div>
 
         <button type="submit" class="btn btn-primary">Save</button>
